[package]
name = "arq_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio = "1.20.1"
arq_plugins = { version = "0.1.0", path = "../arq_plugins" }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
